--- a/codigo/main.ipynb
+++ b/codigo/main.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,19 +14,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
     "\n",
     "# Diretórios de entrada e saída\n",
     "input_dir = \"/mnt/nvme1n1p2/doc/Faculdade-BCC/BCC-8º periodo/jesga/trabalho1/ImagensPDI\"  # Diretório das imagens de entrada\n",
-    "output_dir = 'resultados/'  # Diretório para salvar as imagens processadas\n"
+    "output_dir = \"/mnt/nvme1n1p2/doc/Faculdade-BCC/BCC-8º periodo/jesga/trabalho1/resultados\"  # Diretório para salvar as imagens processadas\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -59,23 +59,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 36,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Imagem stockvault-barn-owl116738.jpg processada e salva em resultados/processada_stockvault-barn-owl116738.jpg\n",
-      "Imagem stockvault-blue-peacock151244.jpg processada e salva em resultados/processada_stockvault-blue-peacock151244.jpg\n",
-      "Imagem stockvault-bulb128619.jpg processada e salva em resultados/processada_stockvault-bulb128619.jpg\n",
-      "Imagem stockvault-purple-flower-in-bloom199928.jpg processada e salva em resultados/processada_stockvault-purple-flower-in-bloom199928.jpg\n",
-      "Imagem stockvault-sharks-2118299.jpg processada e salva em resultados/processada_stockvault-sharks-2118299.jpg\n",
-      "Imagem stockvault-sun-flowers114982.jpg processada e salva em resultados/processada_stockvault-sun-flowers114982.jpg\n",
-      "Imagem stockvault-young-man-watching-the-sunrise-at-rocky-beach222499.jpg processada e salva em resultados/processada_stockvault-young-man-watching-the-sunrise-at-rocky-beach222499.jpg\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "\n",
     "# Função principal para processar imagens no diretório\n",
@@ -103,20 +89,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Imagem stockvault-barn-owl116738.jpg processada e salva em resultados/processada_stockvault-barn-owl116738.jpg\n",
-      "Imagem stockvault-blue-peacock151244.jpg processada e salva em resultados/processada_stockvault-blue-peacock151244.jpg\n",
-      "Imagem stockvault-bulb128619.jpg processada e salva em resultados/processada_stockvault-bulb128619.jpg\n",
-      "Imagem stockvault-purple-flower-in-bloom199928.jpg processada e salva em resultados/processada_stockvault-purple-flower-in-bloom199928.jpg\n",
-      "Imagem stockvault-sharks-2118299.jpg processada e salva em resultados/processada_stockvault-sharks-2118299.jpg\n",
-      "Imagem stockvault-sun-flowers114982.jpg processada e salva em resultados/processada_stockvault-sun-flowers114982.jpg\n",
-      "Imagem stockvault-young-man-watching-the-sunrise-at-rocky-beach222499.jpg processada e salva em resultados/processada_stockvault-young-man-watching-the-sunrise-at-rocky-beach222499.jpg\n"
+      "Imagem stockvault-barn-owl116738.jpg processada e salva em /mnt/nvme1n1p2/doc/Faculdade-BCC/BCC-8º periodo/jesga/trabalho1/resultados/processada_stockvault-barn-owl116738.jpg\n",
+      "Imagem stockvault-blue-peacock151244.jpg processada e salva em /mnt/nvme1n1p2/doc/Faculdade-BCC/BCC-8º periodo/jesga/trabalho1/resultados/processada_stockvault-blue-peacock151244.jpg\n",
+      "Imagem stockvault-bulb128619.jpg processada e salva em /mnt/nvme1n1p2/doc/Faculdade-BCC/BCC-8º periodo/jesga/trabalho1/resultados/processada_stockvault-bulb128619.jpg\n",
+      "Imagem stockvault-purple-flower-in-bloom199928.jpg processada e salva em /mnt/nvme1n1p2/doc/Faculdade-BCC/BCC-8º periodo/jesga/trabalho1/resultados/processada_stockvault-purple-flower-in-bloom199928.jpg\n",
+      "Imagem stockvault-sharks-2118299.jpg processada e salva em /mnt/nvme1n1p2/doc/Faculdade-BCC/BCC-8º periodo/jesga/trabalho1/resultados/processada_stockvault-sharks-2118299.jpg\n",
+      "Imagem stockvault-sun-flowers114982.jpg processada e salva em /mnt/nvme1n1p2/doc/Faculdade-BCC/BCC-8º periodo/jesga/trabalho1/resultados/processada_stockvault-sun-flowers114982.jpg\n",
+      "Imagem stockvault-young-man-watching-the-sunrise-at-rocky-beach222499.jpg processada e salva em /mnt/nvme1n1p2/doc/Faculdade-BCC/BCC-8º periodo/jesga/trabalho1/resultados/processada_stockvault-young-man-watching-the-sunrise-at-rocky-beach222499.jpg\n"
      ]
     }
    ],
