--- a/codigo/main.ipynb
+++ b/codigo/main.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 120,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15,16 +15,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 121,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.image.AxesImage at 0x7bc301008220>"
+       "<matplotlib.image.AxesImage at 0x7bc2ff336a90>"
       ]
      },
-     "execution_count": 76,
+     "execution_count": 121,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -49,16 +49,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 122,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.image.AxesImage at 0x7bc306903df0>"
+       "<matplotlib.image.AxesImage at 0x7bc2ff3b0340>"
       ]
      },
-     "execution_count": 77,
+     "execution_count": 122,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -81,16 +81,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 123,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.image.AxesImage at 0x7bc301104a00>"
+       "<matplotlib.image.AxesImage at 0x7bc2ff029250>"
       ]
      },
-     "execution_count": 78,
+     "execution_count": 123,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -113,16 +113,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 124,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.image.AxesImage at 0x7bc304061280>"
+       "<matplotlib.image.AxesImage at 0x7bc2fef9a580>"
       ]
      },
-     "execution_count": 79,
+     "execution_count": 124,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -146,7 +146,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 125,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -159,7 +159,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 126,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -174,16 +174,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 127,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.image.AxesImage at 0x7bc3066d9ac0>"
+       "<matplotlib.image.AxesImage at 0x7bc2fef09d90>"
       ]
      },
-     "execution_count": 82,
+     "execution_count": 127,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -210,16 +210,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 128,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.image.AxesImage at 0x7bc3067734f0>"
+       "<matplotlib.image.AxesImage at 0x7bc2feefdd60>"
       ]
      },
-     "execution_count": 83,
+     "execution_count": 128,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -242,16 +242,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 129,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.image.AxesImage at 0x7bc3068cdf40>"
+       "<matplotlib.image.AxesImage at 0x7bc2fee71b20>"
       ]
      },
-     "execution_count": 84,
+     "execution_count": 129,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -274,7 +274,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 130,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -287,7 +287,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 131,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -300,16 +300,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 132,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.image.AxesImage at 0x7bc303fbe100>"
+       "<matplotlib.image.AxesImage at 0x7bc2fee60c10>"
       ]
      },
-     "execution_count": 87,
+     "execution_count": 132,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -336,7 +336,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 133,
    "metadata": {},
    "outputs": [
     {
@@ -344,14 +344,14 @@
      "output_type": "stream",
      "text": [
       "\n",
-      "0: 640x480 1 bird, 99.4ms\n",
-      "Speed: 2.1ms preprocess, 99.4ms inference, 1.2ms postprocess per image at shape (1, 3, 640, 480)\n"
+      "0: 640x480 1 bird, 97.1ms\n",
+      "Speed: 2.0ms preprocess, 97.1ms inference, 1.1ms postprocess per image at shape (1, 3, 640, 480)\n"
      ]
     }
    ],
    "source": [
     "# Carrega o modelo YOLO e aplica a segmentação na imagem\n",
-    "model = YOLO(\"yolov8x-seg.pt\")\n",
+    "model = YOLO(\"../yolov8x-seg.pt\")\n",
     "results = model.track(img, persist=True)\n",
     "\n",
     "# Cria uma máscara vazia com o mesmo tamanho da imagem original\n",
@@ -373,7 +373,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 134,
    "metadata": {},
    "outputs": [
     {
